<resources>
    <string name="app_name">Dolares</string>
    <string name="Capsule">Capsule</string>
    <string name="Settings">Settings</string>
    <string name="Cores">Cores</string>
    <string name="LauncPad">LauncPad</string>
    <string name="Launches">Launches</string>
    <string name="Launchpads">Launchpads</string>
    <string name="LogOut">LogOut</string>
    <string name="save_changes">saveChanges</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="changeForName">changeForName</string>
    <string name="Name">Name</string>
    <string name="userName">UserName</string>
    <string name="Hello">Hello</string>
    <string name="this_is_a_sample_text">This is a Sample Text</string>
    <string name="launchImage">launchImage</string>
    <string name="launchlistImage" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_name_is_not_valid">Username is not valid</string>
    <string name="password_is_not_valid">Password must be more than 5 char</string>
    <string name="name_is_not_valid">Name must be more than 2 char</string>
    <string name="username_or_password_isNotValid">Username or Password is not valid</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="your_username">Your Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="buybuy">Buy</string>
    <string name="email">email</string>
    <string name="buywithpoint">Use Bonus</string>
    <string name="your_bonus_point">Bonus Amount</string>
    <string name="ok">Okey</string>
    <string name="HELLO">Hello!!!</string>
    <string name="UserName" />
    <string name="flight_number_template_in_less_than_24h">Flight %d in less than 24h</string>
    <string name="launch_notification_desc_template">"Mission %1$s will launch at %2$s"</string>
    <string name="upcoming_notifications">If you wanna notification about the all upcoming launches</string>
    <string name="user_launch_notification_title">New Rocket Launch -> </string>
    <string name="user_launch_notification_content">In 15 minutes there is a new Launch.Flight number is </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="Block">Block</string>
    <string name="CoreSerial">CoreSerial</string>
    <string name="Merlin1ADenemei" />
    <string name="Details">Details</string>
    <string name="core_serial">Core Serial</string>
    <string name="status">Status</string>
    <string name="Status">Status</string>
    <string name="flight_number">Flight Number</string>
    <string name="launch_date">Launch Date</string>
    <string name="capsule_serial">Capsule Serial</string>
    <string name="Landings">Landings</string>
    <string name="type">Type</string>
    <string name="rtls_attempts">RTLS ATTEMPTS</string>
    <string name="reused">REUSED</string>
    <string name="asds_landings">ASDS LANDINGS</string>
    <string name="rtls_landings">RTLS LANDINGS</string>
    <string name="launch_site">Launch Site</string>
    <string name="ccafs_sl_40">CCAFS SL 40</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="Reused">Reused</string>
    <string name="water_landings">Water Landings</string>
    <string name="_2032021">2032021</string>
    <string name="upcoming_launch_date_format"><b>%1$d</b> Day %2$d Hours %3$d Minutes %4$d Seconds to Launch</string>
    <string name="launched_launch_timer_text">Already Launched</string>
    <string name="launch_success_desc">Launch Success </string>
    <string name="launch_failure_desc">Launch Failed</string>
    <string name="launch_failure_or_success_desc_not_found">No info</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="please_enter_your_pass">Please Enter Your Pass</string>
    <string name="dolares">DOLARES</string>
    <string name="asds_attempt">ASDS ATTEMPT</string>
    <string name="flight_number_text">Flight Number:</string>
    <string name="youtube_link_text">Youtube</string>
    <string name="wikipedia_link_text">Wikipedia</string>
    <string name="reddit_link_text">Reddit</string>
    <string name="no_links">There is no Link</string>

</resources>