<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.dolares.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAD416"
        tools:context=".ui.register.RegisterFragment">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="212dp"
            android:layout_height="209dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="false"
            android:text="@string/dolares"
            android:textColor="@color/black"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />


        <EditText
            android:id="@+id/registerEditTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/your_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/registerEditTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/registerEditTextTextPersonName"
            app:layout_constraintStart_toStartOf="@+id/registerEditTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/registerEditTextTextPersonName" />

        <EditText
            android:id="@+id/registerEditTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/registerEditTextEmail"
            app:layout_constraintStart_toStartOf="@+id/registerEditTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/registerEditTextEmail" />

        <Button
            android:id="@+id/registerFlowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_corners"
            android:onClick="@{()->viewModel.registerUser(viewModel.registerForm.useremail,viewModel.registerForm.password,viewModel.registerForm.username)}"
            android:text="@string/register"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/registerEditTextPassword"
            app:layout_constraintStart_toStartOf="@+id/registerEditTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/registerEditTextPassword" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            registerStatus="@{viewModel.registerStatus}"
            android:layout_width="87dp"
            android:layout_height="73dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>