<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.dolares.ui.cores.CoreDetailsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.cores.CoreDetailsFragment"
        android:background="@drawable/starbackground">

        <LinearLayout
            android:id="@+id/LinenarForImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:src="@drawable/indir"/>

    <LinearLayout
        android:id="@+id/LinearLayoutCoreSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CoreSerialText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/core_serial"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/CoreSerialTextData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.serial}"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Block"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginLeft="250dp"
            android:textAlignment="center"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.block.toString()}"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.status}"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginLeft="260dp"
            android:textAlignment="center" />
    </LinearLayout>

            <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rtls_attempts"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.rtlsAttempts.toString()}"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_marginLeft="220dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rtls_landings"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.rtlsLandings.toString()}"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginLeft="224dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asds_landings"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.asdsLandings.toString()}"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_marginLeft="222dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asds_landings"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.asdsAttempts.toString()}"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginLeft="221dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reused"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.core.reuseCount.toString()}"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_marginLeft="290dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Details"
            android:layout_marginLeft="130dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textSize="32sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@{viewModel.core.lastUpdate.toString()}"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>
</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>